--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
             <div class="flex flex-col items-center gap-1">
               <i class="fas fa-map-marker-alt text-yellow-400 text-3xl"></i>
-              <p class="text-base">Jl. Mataram No. 1,<br>Halaman Kantor Setda Kota Pekalongan</p>
+              <p class="text-base">Jl. Mataram No. 1<br>Halaman Kantor Setda Kota Pekalongan</p>
             </div>
             <div class="flex flex-col items-center gap-1">
               <i class="fas fa-shirt text-yellow-400 text-3xl"></i>
