--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             style="transform: translateY(-5%);"
           />
           <p class="text-center leading-relaxed">
-            Kepada Yth. Bapak/Ibu/Saudara/i<br /><strong>Tamu Undangan</strong>
+            Kepada Yth. Bapak/Ibu/Saudara/i<br /><strong></strong>
           </p>
           <p id="nama-tamu-wrapper" class="hidden mt-1 w-md text-center">
             <span
